--- a/src/main/resources/workshop/AfficherWorkshopsFront.fxml
+++ b/src/main/resources/workshop/AfficherWorkshopsFront.fxml
@@ -78,13 +78,21 @@
                             <Label text="Discuter avec Chatbot"
                                    style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: #014421;" />
 
-                            <ScrollPane fitToWidth="true" fitToHeight="true" prefHeight="350" maxHeight="350">
+                            <ScrollPane fx:id="chatScrollPane"
+                                        fitToWidth="true"
+                                        hbarPolicy="NEVER"
+                                        vbarPolicy="ALWAYS"
+                                        prefHeight="350"
+                                        maxHeight="350"
+                                        style="-fx-background-color: transparent;">
                                 <content>
-                                    <VBox fx:id="chatMessagesContainer" spacing="8"
-                                          style="-fx-padding: 5;">
-                                    </VBox>
+                                    <VBox fx:id="chatMessagesContainer"
+                                          spacing="8"
+                                          prefWidth="300"
+                                          style="-fx-padding: 5;" />
                                 </content>
                             </ScrollPane>
+
 
                             <HBox spacing="5">
                                 <TextField fx:id="chatInputField"
