--- a/src/main/resources/styles/forum.css
+++ b/src/main/resources/styles/forum.css
@@ -80,6 +80,12 @@
     -fx-background-color: #b2ebf2;
 }
 
+.modal-overlay {
+    -fx-background-color: rgba(0, 0, 0, 0.8);
+    -fx-alignment: center;
+}
+
+
 .sidebar {
     -fx-background-color: white;
     -fx-background-radius: 10;
