--- a/src/main/resources/BaseUser.fxml
+++ b/src/main/resources/BaseUser.fxml
@@ -10,26 +10,19 @@
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="controllers.BaseUserController"
             stylesheets="@baseUser.css"
-            prefWidth="1200" prefHeight="800">
+            prefWidth="1550.0" prefHeight="795.0">
     <Label fx:id="sceneReference" visible="false" />
     <!-- HEADER -->
     <top>
         <VBox spacing="0">
-            <!-- Bande contact -->
-            <HBox spacing="10" alignment="CENTER_LEFT" styleClass="top-bar">
-                <Label text="📞 +216 95 123 742" />
-                <Label text="|" />
-                <Label text="📧 RecyConnect@gmail.com" />
-                <Pane HBox.hgrow="ALWAYS"/>
-                <Label text="Suivez-nous :   " />
-            </HBox>
+
 
             <!-- Menu -->
             <HBox spacing="20" alignment="CENTER_LEFT" styleClass="menu-bar">
                 <ImageView fitHeight="40" fitWidth="40">
                     <Image url="mainlogo.png"/>
                 </ImageView>
-                <Label text="Accueil" styleClass="nav-link"/>
+                <Label text="Accueil" onMouseClicked="#home" styleClass="nav-link"/>
                 <Label text="Nos produits" onMouseClicked="#showArticleView" styleClass="nav-link"/>
                 <Label text="Évènements" onMouseClicked="#showEventsView" styleClass="nav-link"/>
                 <Label text="Workshops" onMouseClicked="#showWorkshopsView" styleClass="nav-link"/>
