--- a/src/main/resources/workshop/AjouterCours.fxml
+++ b/src/main/resources/workshop/AjouterCours.fxml
@@ -8,13 +8,13 @@
 <ScrollPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="controllers.workshop.AjouterCours"
-            fitToWidth="true"
+            prefWidth="1500.0" prefHeight="600.0"
             style="-fx-background: #EDF7EF;">
 
     <content>
         <VBox alignment="TOP_CENTER" spacing="30" style="-fx-padding: 30;">
 
-            <VBox prefWidth="700" spacing="15"
+            <VBox prefWidth="700" spacing="15" alignment="TOP_CENTER"
                   style="-fx-background-color: white;
                          -fx-padding: 20;
                          -fx-background-radius: 10;
