--- a/src/main/resources/EventViews/DashboardEvents.css
+++ b/src/main/resources/EventViews/DashboardEvents.css
@@ -63,3 +63,38 @@
 .scroll-pane > .viewport {
     -fx-background-color: #f5f5f5;
 }
+
+
+.tab-pane {
+    -fx-tab-min-width: 150px;
+    -fx-tab-max-width: 150px;
+    -fx-tab-min-height: 40px;
+    -fx-tab-max-height: 40px;
+    -fx-background-color: #f5f5f5;
+    -fx-border-color: transparent;
+    -fx-padding: 10px;
+}
+
+.tab {
+    -fx-background-insets: 0;
+    -fx-padding: 0 10px;
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+    -fx-background-color: #ffffff; /* vert élégant */
+    -fx-text-base-color: white;
+    -fx-border-radius: 8px 8px 0 0;
+    -fx-background-radius: 8px 8px 0 0;
+}
+
+.tab:selected {
+    -fx-background-color: #b1c3b8;
+    -fx-text-fill: #000000;
+}
+
+.tab-label {
+    -fx-text-fill: #000000;
+}
+
+.tab-header-background {
+    -fx-background-color: transparent;
+}
